# toArp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  test.sh
.cache/clangd/index/: AudioData.cpp.8E28786BF2CD8EB0.idx  AudioData.h.4DB10B0A65120492.idx  Exception.cpp.17784BD9EBEE7BFA.idx  Exception.h.2EB46579E1BCAA17.idx  File.cpp.CFFC9D9D8D6181DB.idx  File.h.680D2BDA070EABD0.idx  Fourier.cpp.DFC8C747F1D4D374.idx  Fourier.h.ED80912E83A40F8B.idx  FrequencyDomain.cpp.3B18A403008D8633.idx  FrequencyDomain.h.BC6040BDA246B2E3.idx  LowPassFilter.cpp.AB346909C0E4F63E.idx  LowPassFilter.h.1E86EE86E8543940.idx  PeakFrequencyDetection.cpp.4A917A479C561BB2.idx  PeakFrequencyDetection.h.E0033FB8CA1C8D38.idx  PeakProfile.cpp.5A3447CC8FE1B686.idx  PeakProfile.h.87F055A5D5292164.idx  PhaseVocoder.cpp.7A0A6D2C43434CC6.idx  PhaseVocoder.h.25B9324E34A0B125.idx  Reader.cpp.04C7BE1F1A5FB887.idx  Reader.h.937E85D00AB67A8A.idx  Resampler.cpp.E2685A8EE9AEED76.idx  Resampler.h.86F9669308075907.idx  SignalConversion.cpp.003A191EF0013827.idx  SignalConversion.h.468879EAA4D0025D.idx  Stringify.cpp.0133E9B63F68C396.idx  Stringify.h.EF451D68669E0DB2.idx  Timer.cpp.68DBEE8713A782A3.idx  Timer.h.797F820C5CF2BE7C.idx  TransientDetector.cpp.0E179D27E3FEAAC7.idx  TransientDetector.h.08FE3F2F01A62006.idx  TransientPeakAndValley.cpp.FAEBDE76E0855C76.idx  (+16 more)
include/: MusicController.h  Synth.h  Theory.h  TransientDetector.h  find_peaks.hpp
src/: MusicController.cpp  MusicController.h  Synth.cpp  Synth.h  Theory.h  TransientDetector.cpp  find_peaks.cpp  main.cpp
